--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -1,3 +1,21 @@
+#preview-container .modal-content{
+    background: #fff;
+}
+#preview-container .modal-footer
+{
+    border-top:1px solid #ccc;
+    border: none;
+    text-align: right;
+}
+
+#preview-container .modal-body textarea{
+    width: 100%;
+    min-height: 80px;
+    border-radius: 10px;
+    outline: none;
+}
+
+
 #preview-container{
     margin-top: -30px;
 }
@@ -92,6 +110,13 @@
 .create-comment .comment-star, .comment-count,.comment-score {
     float: right;
 }
+.comment-star
+{
+    
+}
+.starLight{
+    color: #DFA515;
+}
 .create-comment textarea{
     width: 99%;
     height: 100px;
@@ -121,6 +146,7 @@
 }
 .coment-item .item-content{
     margin-top: 10px;
+    word-break: break-all;
 }
 #preview-container .editBox
 {
