--- a/src/coms/res-school/views/school-content.html
+++ b/src/coms/res-school/views/school-content.html
@@ -1,11 +1,8 @@
 <div class="res-content-header"></div>
 <div id="res-content-right">
-	<div class="res-header-catogry">
-		<!--<span class="catogry-item catogry-item-active">全部</span>-->
+	<!--<div class="res-header-catogry">
 		<span class="catogry-item" ng-repeat="v in pools track by $index" ng-class="{'catogry-item-active':isPoolActive(v.id)}" ng-click="typeAndFormat($index,0)">{{v.name}}</span>
-		<!--<span class="catogry-item">情景英语</span>
-		<span class="catogry-item">题库</span>-->
-	</div>
+	</div>-->
 	<div class="res-header-type">
 		<span class="type-title">资源类型:</span>
 		<!--<span class="type-list type-active">全部</span>-->
