--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -22,7 +22,7 @@
 					<span class="item-info-type">类型: {{item.type}}</span>
 					<span class="item-info-size">大小：{{item.size}}</span>
 				</div>
-				<span class="prepare-download"><i class="icon-download-alt"></i></span>
+				<span class="prepare-download"><img src="assets/img/prepare/download_icon.png"></i></span>
 				<span><i class="icon-plus-sign"></i></span>
 				<div class="right-tools">
 					<div>基础资源</div>
