--- a/src/less/settings.less
+++ b/src/less/settings.less
@@ -212,6 +212,8 @@
 .modal-content {
     background-color: rgba(255,255,255,0);
     border-radius: 12px;
+    border: none;
+    box-shadow: none;
 }
 
 .avatar-modal-body {
@@ -247,24 +249,6 @@
 .avatar-tabs li>img {
     height: 43px;
 }
-
-
-
-//.avatar-tabs li:first-child {
-//    position: absolute;
-//    left: 0;
-//    top: 0;
-//    background: url(../../../assets/img/settings/tab_active.png) no-repeat;    
-//    z-index: 1000;
-//}
-
-//.avatar-tabs li:last-child {
-//    position: absolute;
-//    top: 0;
-//    left: 140px;
-//    background: url(../../../assets/img/settings/tab2_active.png) no-repeat;
-//    height: 44px;
-//}
 
 .avatar-tab-content {
     width: 100%;
