--- a/src/coms/settings/views/settings.html
+++ b/src/coms/settings/views/settings.html
@@ -110,9 +110,9 @@
 		    			<div class="user-info">
 		    				<form class="user-info-form">
 		    					<span class="info-label">修改性别：</span>
-		    					<input type="radio" value="男" id="male" ng-model="sexSelected" ng-click="setMale(sexSelected)"> 
+		    					<input type="radio" value="男" id="male" ng-model="sexSelected" ng-click="setMale(true)"> 
 		    					<label for="male">男</label>
-		    					<input type="radio" value="女" id="female" ng-model="sexSelected" ng-click="setMale(sexSelected)"> 
+		    					<input type="radio" value="女" id="female" ng-model="sexSelected" ng-click="setMale(false)"> 
 		    					<label for="female">女</label>
 		    				</form>
 		    			</div>
@@ -142,7 +142,7 @@
 		    			<div class="user-info">
 		    				<form class="user-info-form">
 		    					<span class="info-label">旧密码：</span>
-		    					<input type="password" value="oldPsw" class="user-info-input passwd-input" ng-model="oldPsw"> 
+		    					<input type="password" value="oldPsw" class="user-info-input passwd-input" ng-model="oldPsw" ng-focus="initForm()"> 
 	    						<label class="hint-one hint-five" ng-show="oldPswError">原密码错误，请重新输入！</label>
 		    				</form>
 		    			</div>
@@ -151,6 +151,7 @@
 		    					<span class="info-label">新密码：</span>
 		    					<input type="password" value="newPsw" class="user-info-input passwd-input" ng-model="newPsw">
 		    					<label class="hint-one hint-two">建议使用英文字母加数字或符号的混合密码。</label>
+		    					<label class="hint-one hint-five" ng-show="newPswError">请输入新密码。</label>
 		    				</form>
 		    					
 		    			</div>
