--- a/src/less/onlineres.less
+++ b/src/less/onlineres.less
@@ -1,5 +1,16 @@
-// slide样式
+// 在线授课页
 #onlineres-container{
     min-height: 900px;
-    margin-top: 45px;
+    margin-top: -30px;
+}
+#onlineres-container .header-nav-tips{
+    color: #fff;
+    
+}
+#onlineres-container .header-nav-tips span{
+   padding: 0 3px;
+   cursor: pointer;
+}
+#onlineres-container .header-nav-tips span:hover{
+    text-decoration: underline;
 }
