--- a/src/less/slide.less
+++ b/src/less/slide.less
@@ -72,12 +72,13 @@
     margin: 30px 50px;
 }
 .slide-thumbnail li{
-    display: inline-block;
+    float: left;
     width: 14.5%;
     margin: 6px;  
 }
 .slide-thumbnail img{
     width: 100%;
+    height: 100px;
 }
 .slide-thumbnail img:hover{
     width: 99%;
