--- a/src/less/basic.less
+++ b/src/less/basic.less
@@ -125,3 +125,12 @@ treecontrol{
     text-align: center;
     font-size: 20px;
 }
+.confirm-modal .modal-dialog {
+    width: 670px;
+}
+.alert-modal .modal-dialog {
+    width: 670px;
+}
+.logger-modal .modal-dialog {
+    width: 670px;
+}
