--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -110,12 +110,14 @@
 .create-comment .comment-star, .comment-count,.comment-score {
     float: right;
 }
-.comment-star
-{
-    
-}
+
 .starLight{
     color: #DFA515;
+   
+}
+.starHover{
+    color: #DFA515;
+    cursor: pointer;
 }
 .create-comment textarea{
     width: 99%;
@@ -164,4 +166,7 @@
 #preview-container .shen
 {
     color: #E23C6C;
+}
+#preview-container .line{
+    border: 2px solid @color1;
 }
