--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -94,7 +94,9 @@
 				<div class="coment-item " ng-repeat="comment in myCommentList">
 					<div class="item-user-date">
 						<span item-user>{{comment.userName}}</span>
-						<span item-date>{{commentTime(comment.atime)}}</span>
+						<!--<span item-date>{{commentTime(comment.atime)}}</span>-->
+						
+						<show-time item-date data-value="{{comment.atime | date:'yyyy-MM-dd HH:mm:ss'}}"></show-time>
 					</div>
 					<div class="item-content" contenteditable="false">{{comment.acontent}}</div>
 					<div class="editBox">
@@ -141,7 +143,6 @@
             </button>
 			</div>
 		</div>
-		<!-- /.modal-content -->
 	</div>
 	<!-- /.modal -->
 </div>
