--- a/src/less/res.less
+++ b/src/less/res.less
@@ -468,6 +468,7 @@
     bottom: 350px;
     right: 5px;
     cursor: pointer;
+    z-index: 99999;
 }
 .prepare-fixed:hover .prepare-ctrls{
     visibility: visible;   
