--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -94,6 +94,8 @@
 .list-content .item-info{
    display: inline-block;
    margin-left: 10px;
+   min-width: 250px;
+   vertical-align: middle;
 }
 .list-content .list-item i{
    color: @color5;
@@ -105,6 +107,9 @@
    color: #fff;
    background: @color5;
 }
+.list-item span {
+    cursor: pointer;
+}
 .list-content .list-item-thumb{
     width: 100px;
     height: 60px;
@@ -114,9 +119,26 @@
 }
 .list-content .prepare-download {
     margin-left: 50px;
+    margin-right: 20px;
+}
+
+
+.list-content span img {
+    width: 20px;
 }
 .list-content .right-tools{
     float: right;
+    padding-right: 15px;
+    text-align: center;
+    vertical-align: bottom;
+}
+.list-content .right-tools span {
+    cursor: pointer;
+}
+.list-content .right-tools span img {
+    margin: 0 5px;
+    width: 20px;
+    height: 20px;
 }
 
 //备课夹列表
