--- a/src/less/res.less
+++ b/src/less/res.less
@@ -318,6 +318,7 @@
   margin-right: 15px;
   padding-bottom: 10px;
   margin-bottom: 20px;
+  min-height: 400px;
 }
 
 // 列表显示
@@ -424,6 +425,10 @@
     padding: 6px 10px;
     margin-right: 0;
     margin-left: 10px;
+}
+.noDataCtrl{
+    text-align: center;
+    padding: 150px 50px;
 }
 // 列出备课夹
 .addPrepare:hover .res-prepare-list{
