--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -50,6 +50,27 @@
     margin-left: 60px;
 }
 
+#prepare-content .new-prepare-title input{
+    height: 30px;
+    line-height: 30px;
+    margin-right: 15px;
+    width: 160px;
+    padding: 5px 10px;
+    font-size: 1.4rem;
+    border: 1px solid #3FBBCF;
+    border-radius: 6px;
+}
+
+#prepare-content .new-prepare-title button {
+    height: 30px;
+    line-height: 25px;
+    background-color: #3FBBCF;
+    color: #FFFFFF;
+    border-radius: 8px;
+    border: none;
+    font-size: 1.4rem;
+}
+
 #prepare-content .zip-download{
     float: right;
     padding:5px 10px;
@@ -139,6 +160,11 @@
     margin: 0 5px;
     width: 20px;
     height: 20px;
+}
+
+.list-content .right-tools span img.active {
+    background-color: #219B81;
+    border-radius: 10px;
 }
 
 //备课夹列表
