--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -160,8 +160,8 @@
 				<i class="icon-star"></i>
 			</span>
 			<span class="comment-count">已有{{info.userNum}}人评分,平均分：{{info.avgScore}}</span>
-			<span>下载次数:{{$scope.info.downLoadTimes;}}</span>
-			<span>浏览次数:{{$scope.info.clickTimes;}}</span>
+			<span>下载次数:{{$scope.info.downLoadTimes}}</span>
+			<span>浏览次数:{{$scope.info.clickTimes}}</span>
 			
 			<button class="btn btn-danger">加入备课夹</button>
 			<span class="down-orign">下载到本地</span>
