--- a/src/coms/res-system/views/sysres-content.html
+++ b/src/coms/res-system/views/sysres-content.html
@@ -41,12 +41,12 @@
 				<span class="res-list-tools">
 					<div class="res-select addPrepare" ng-click="addToCurrentPrepare(parentIndex)">
 						加入备课夹
-						<div class="res-prepare-list" >
-							<div class="res-prepare-list-item" ng-repeat="item in prepareList track by $index"  ng-click="addToPrepare($event, parentIndex, $index)">{{item.title}}</div>
+						<div class="res-prepare-list">
+							<div class="res-prepare-list-item addPrepareInner" ng-repeat="item in prepareList track by $index"  ng-click="addToPrepare($event, parentIndex, $index)">{{item.title}}</div>
 							<div class="res-prepare-list-item" ng-show="prepareList.length == 0">当前目录节点下还没有备课夹，点击加入备课夹，会默认创建</div>
 						</div>
-					</div><br>
-					
+					</div>
+					<br>
 					<label class="res-download" ng-click="resDownload(list.id)"><i class="icon-download-alt"></i>点击下载</label>
 				</span>
 			</li>
@@ -76,6 +76,20 @@
 		</ul>
 		<div class="noDataCtrl" ng-show="noDataCtrl">当前选择下还没有资源哦</div>
 		<div style="clear:both"></div>
+		<div class="page-ctrl" ng-hide="noDataCtrl">
+			<input class="res-checkbox-page" type="checkbox"> 本页全选
+			<span class="res-text-total"> 共 {{bigTotalItems}}条，</span>
+			<span class="res-text-perpage"> 每页显示<input type="text" no-model="perPage" />条</span>
+			
+			<div class="res-select addPrepare res-add-prepare-all">
+				加入备课夹
+				<div class="res-prepare-list addPrepare">
+					<div class="res-prepare-list-item" ng-repeat="item in prepareList track by $index">{{item.title}}</div>
+					<div class="res-prepare-list-item" ng-show="prepareList.length == 0">当前目录节点下还没有备课夹，点击加入备课夹，会默认创建</div>
+				</div>
+			</div>
+			<label class="res-download res-download-all"><i class="icon-download-alt"></i>点击下载</label>
+		</div>
 		<div class="coms-pagination" ng-hide="noDataCtrl">
 		 	<uib-pagination total-items="bigTotalItems" ng-model="VM.currentPageCtrl" max-size="maxSize"  boundary-link-numbers="true" previous-text="上一页" next-text="下一页" num-pages="perPage" ng-change="pageChanged()"></uib-pagination>
 			<div class="page-go">
