--- a/src/less/res.less
+++ b/src/less/res.less
@@ -510,3 +510,34 @@
     top: -5px;
     left: 36px;
 }
+.page-ctrl{
+    padding: 5px 15px;
+    line-height: 20px;
+    color: #2B2C2C;
+    margin-top: 15px;
+}
+.page-ctrl .res-checkbox-page{
+    width: 15px;
+    height: 15px;
+}
+.res-text-total{
+    margin-left: 30px;
+}
+.res-text-perpage{
+    margin-left: 20px;
+}
+.res-text-perpage input{
+    width: 30px;
+    border-radius: 2px;
+    height: 22px;
+    margin: 0 5px;
+}
+.res-download-all{
+    float: right;
+}
+.res-add-prepare-all{
+    float: right;
+    margin-top: -10px;
+    margin-left: 15px;
+    
+}
