--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -146,7 +146,7 @@
 			<!-- /.modal-content -->
 		</div>
 		<!-- /.modal -->
-	</div>aaaaaa
+	</div>
 	<div class="bottom-fixed">
 		<div class="fix-inner">
 			<span class="comment-star">
