--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -272,7 +272,7 @@
     float: left;
 }
 
-#preview-container .btn-danger
+#preview-container .fix-inner .btn-danger
 {
     float: right;
     margin: 20px;
