--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -17,11 +17,11 @@
 				</div>
 				<div class="list-item" ng-repeat="item in list.children">
 					<input type="checkbox"/>
-					<img class="list-item-thumb" src="assets/img/title.jpg"/>
+					<img class="list-item-thumb" ng-src="{{item.imgPath}}" fallback-src="assets/img/title.jpg"/>
 					<div class="item-info">
 						<span class="item-info-title">{{item.title}}</span><br>
 						<span class="item-info-type">类型: {{item.unifyType}}</span>
-						<res-size size-content="item.size"></res-size>
+						<res-size data-value="item.size"></res-size>
 					</div>
 					<span class="prepare-download"><img src="assets/img/prepare/download_icon.png"></span>
 					<span><img src="assets/img/prepare/edit_icon.png"></span>
