--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -23,6 +23,7 @@
     padding-top: 10px;
     padding-bottom: 20px;
     font-size: 16px;
+    min-height: 700px;
 }
 #prepare-content .prepare-list{
     margin:10px 0;
@@ -211,6 +212,7 @@
 }
 .prepare-all-item-img{
     width: 70%;
+    height: 120px;
 }
 #prepare-content-list .zip-download{
     padding:5px 10px;
