--- a/src/coms/res-system/views/sysres-content.html
+++ b/src/coms/res-system/views/sysres-content.html
@@ -33,7 +33,9 @@
 				<span class="res-list-info" ui-sref="previewres({resId:list.id,curTfcode:curTfcode})">
 					<label class="res-title">{{ list.title }}</label><br>
 					<label class="res-type">类型: {{ list.mtype }}</label>
-					<label class="res-size">大小：{{ list.fsize }}</label><br>
+					<label class="res-size">
+						<res-size data-value="{{list.fsize}}"></res-size>
+					</label><br>
 					<label class="res-star"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></label>
 					
 					<label class="res-number">{{list.clickTimes}}浏览/{{list.dloadTimes}}下载</label>
@@ -58,7 +60,10 @@
 				<span class="res-thubmlist-info">
 					<label class="res-title">{{ list.title }}</label><br>
 					<label class="res-type">类型: {{ list.mtype }}</label>
-					<label class="res-size">大小：{{ list.fsize }}</label><br>
+					
+					<label class="res-size">
+						<res-size data-value="{{list.fsize}}"></res-size>
+					</label><br>
 					<label class="res-star"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></label>
 					
 					<label class="res-number">{{list.clickTimes}}浏览/{{list.dloadTimes}}下载</label>
