--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -21,7 +21,7 @@
 					<div class="item-info">
 						<span class="item-info-title">{{item.title}}</span><br>
 						<span class="item-info-type">类型: {{item.unifyType}}</span>
-						<res-size data-value="item.size"></res-size>
+						<res-size data-value="{{item.size}}"></res-size>
 					</div>
 					<span class="prepare-download"><img src="assets/img/prepare/download_icon.png"></span>
 					<span><img src="assets/img/prepare/edit_icon.png"></span>
