--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -2,7 +2,7 @@
 
 	<div class="header-nav-tips">
 		<div class="nav_left">
-			<span ng-repeat="navCur in currentNav">{{navCur.name}}<i class="icon-angle-right"></i></span>
+			<span ng-repeat="navCur in currentNav" ng-class="links[$index]?'links':''" ng-click="back($index,navCur.tfcode)">{{navCur.name}}<i class="icon-angle-right"></i></span>
 		</div>
 		<div class="nav_right">
 		  <span class="mulu">其他版本目录
@@ -48,9 +48,8 @@
 			</div>
 		</div>
 		<div class="slide-list">
-			
 			<div class="slide-list-item" ng-repeat="item in allSourceList" ng-click="slideChange(item.id,$index)">
-				<img src="{{item.thumbnailpath}}" ng-class="curImg[$index]?'line':''">
+				<img ng-src="{{item.thumbnailpath}}" ng-class="curImg[$index]?'line':''" fallback-src="assets/img/title.png">
 				<span>{{item.title}}_{{item.mtype}}</span>
 			</div>
 			<div class="more" ng-click="getAllSourceMore()">加载更多</div>
