--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -35,7 +35,12 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     height: 24px;
-    
+}
+#preview-container .links
+{
+    text-decoration: underline;
+    cursor: pointer;
+    font-weight: bold;
 }
 #preview-container .mulu
 {
