--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -195,4 +195,11 @@
     margin-left: 20px;
 }
 
-
+.upload-file-content{
+  min-height: 300px; 
+}
+.upload-modal-body{
+    width: 600px;
+    margin: 0 auto;
+    margin-top: 200px;
+}
