--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -25,17 +25,6 @@
 			</div>
 			<div class="slide-fullscreen" ng-click="toggleFullscreen()"><i class="icon-fullscreen"></i></div>
 		</div>
-	
-		<!--<div class="slide-tools" ng-show="VM.slideTools">
-			<div class="slide-arrow2 slide-pre" ng-click="slidePreCustom()"><i class="icon-chevron-left"></i></div>
-			<div class="slide-arrow2 slide-next" ng-click="slideNextCustom()"><i class="icon-chevron-right"></i></div>
-			<ul class="slide-thumbnail">
-				<li ng-repeat="item in slidesCustom" ng-click="selectRes($index)">
-					<img src="assets/img/online/tmp.png" />
-					<span>{{item.title}}</span>
-				</li>
-			</ul>
-		</div>-->
 	</div>
 	<div class="col-md-2">
 		<div class="slide_head">类型：<span class="type_box"><span>{{typeName}}</span><i class="icon-angle-down"></i></span>
@@ -49,7 +38,7 @@
 		</div>
 		<div class="slide-list">
 			<div class="slide-list-item" ng-repeat="item in allSourceList" ng-click="slideChange(item.id,$index)">
-				<img ng-src="{{item.thumbnailpath}}" ng-class="curImg[$index]?'line':''" fallback-src="assets/img/title.png">
+				<img ng-src="{{ item.thumbnailpath ? item.thumbnailpath: 'null'}}" ng-class="curImg[$index]?'line':''" fallback-src="assets/img/sample.png">
 				<span>{{item.title}}_{{item.mtype}}</span>
 			</div>
 			<div class="more" ng-click="getAllSourceMore()">加载更多</div>
@@ -67,56 +56,14 @@
 		<div class="res-intro">
 			<div class="intro-banner">资源简介</div>
 			<div class="intro-info">
-				<span class="intro-title">《{{info.title}}》</span>
-				<span class="intro-type">类型：{{info.mtype}}</span>
-				<span class="intro-size">大小：{{info.fSize/1024 | number:0}}KB</span>
+				<span class="intro-title">《{{VM.info.title}}》</span>
+				<span class="intro-type">类型：{{VM.info.mtype}}</span>
+				<res-size class="intro-size" data-value="{{ VM.info.fSize }}"></res-size>
 			</div>
-			<div class="intro-details">{{info.des}}</div>
+			<div class="intro-details">{{VM.info.des}}</div>
 		</div>
 	
-		<div class="res-conmment">
-			<div class="create-comment">
-				<div class="comment-info">
-					<span class="comment-user">用户名：{{userName}}</span>
-					
-	
-				</div>
-				<textarea ng-change="changeComment()" ng-model="inputComment"></textarea>
-				<span class="comment-text"><span class="shen">{{commentNum}}</span>/200</span>
-				<button class="btn btn-success publish" ng-click="publishComment()">发表</button>
-			</div>
-	
-			<div class="conment-list">
-				<div class="comment-type">
-					<span class="other-comment" ng-click="changeBlock('other')" ng-class="otherShow?'comment-active':''">他人评论</span>
-					<span class="my-comment " ng-click="changeBlock('my')" ng-class="myShow?'comment-active':''">我的评论</span>
-				</div>
-				<div class="my" ng-show="myShow">
-					<div class="coment-item " ng-repeat="comment in myCommentList">
-						<div class="item-user-date">
-							<span item-user>{{comment.userName}}</span>
-							<show-time item-date data-value="{{comment.atime | date:'yyyy-MM-dd HH:mm:ss'}}"></show-time>
-						</div>
-						<div class="item-content" contenteditable="false">{{comment.acontent}}</div>
-						<div class="editBox">
-							<button class="btn btn-danger" ng-click="editCom(comment.id,comment.acontent)">编辑</button>
-							<button class="btn btn-danger" ng-click="deleteCom(comment.id)">删除</button>
-						</div>
-					</div>
-				</div>
-				<div class="other" ng-show="otherShow">
-					<div class="coment-item " ng-repeat="comment in otherCommentList">
-						<div class="item-user-date">
-							<span item-user>{{comment.userName}}</span>
-							<show-time item-date data-value="{{comment.atime | date:'yyyy-MM-dd HH:mm:ss'}}"></show-time>
-						</div>
-						<div class="item-content">{{comment.acontent}}</div>
-	
-					</div>
-				</div>
-	
-			</div>
-		</div>
+		<div ng-controller="resCommentCtrl" data-ng-include="'/coms/res-preview/views/comment.html'"></div>
 	
 	</div>
 <!-- 模态框（Modal） -->
@@ -145,20 +92,5 @@
 			<!-- /.modal-content -->
 		</div>
 		<!-- /.modal -->
-	</div>
-	<div class="bottom-fixed">
-		<div class="fix-inner">
-			<span class="comment-star">
-				<i class="icon-star" ng-repeat="star in showStar" ng-class="{'starLight':curStar[$index],'starHover':hoverStar[$index]}" ng-mouseover="mouseOverStar($index)" ng-mouseout="mouseOutStar($index)" ng-click="starClick($index)"></i>
-				
-			</span>
-			<span class="comment-count">已有{{info.userNum}}人评分,平均分{{info.avgScore}}</span>
-			<span>下载次数:{{info.dloadTimes}}</span>
-			<span>浏览次数:{{info.clickTimes}}</span>
-			
-			<button class="btn btn-danger">加入备课夹</button>
-			<span class="down-orign">下载到本地</span>
-			
-		</div>
 	</div>
 </div>
